operator/pkg/gateway-api/testdata/gateway/route-session-persistence/output/cec-same-namespace.yaml
metadata:
  annotations:
    cec.cilium.io/use-original-source-address: "false"
  labels:
    gateway.networking.k8s.io/gateway-name: same-namespace
  name: cilium-gateway-same-namespace
  namespace: gateway-conformance-infra
  ownerReferences:
  - apiVersion: gateway.networking.k8s.io/v1
    controller: true
    kind: Gateway
    name: same-namespace
    uid: ""
  resourceVersion: "1"
spec:
  backendServices:
  - name: infra-backend-v1
    namespace: gateway-conformance-infra
    number:
    - "8080"
    - "8081"
  - name: infra-backend-v2
    namespace: gateway-conformance-infra
    number:
    - "8080"
  resources:
  - '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    filterChains:
    - filterChainMatch:
        transportProtocol: raw_buffer
      filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          commonHttpProtocolOptions:
            maxStreamDuration: 0s
          httpFilters:
          - name: envoy.filters.http.grpc_web
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
          - name: envoy.filters.http.grpc_stats
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_stats.v3.FilterConfig
              emitFilterState: true
              enableUpstreamStats: true
          - name: envoy.filters.http.stateful_session
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSession
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig: {}
          rds:
            routeConfigName: listener-insecure
          statPrefix: listener-insecure
          streamIdleTimeout: 300s
          upgradeConfigs:
          - upgradeType: websocket
          useRemoteAddress: true
    listenerFilters:
    - name: envoy.filters.listener.tls_inspector
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    name: listener
    socketOptions:
    - description: Enable TCP keep-alive (default to enabled)
      intValue: "1"
      level: "1"
      name: "9"
    - description: TCP keep-alive idle time (in seconds) (defaults to 10s)
      intValue: "10"
      level: "6"
      name: "4"
    - description: TCP keep-alive probe intervals (in seconds) (defaults to 5s)
      intValue: "5"
      level: "6"
      name: "5"
    - description: TCP keep-alive probe max failures.
      intValue: "10"
      level: "6"
      name: "6"
  - '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    name: listener-insecure
    virtualHosts:
    - domains:
      - '*'
      name: '*'
      routes:
      - match:
          path: /exact
        route:
          maxStreamDuration:
            maxStreamDuration: 0s
          weightedClusters:
            clusters:
            - name: gateway-conformance-infra:infra-backend-v1:8080
              weight: 70
            - name: gateway-conformance-infra:infra-backend-v2:8080
              weight: 30
        typedPerFilterConfig:
          envoy.filters.http.stateful_session:
            '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
            statefulSession:
              sessionState:
                name: envoy.http.stateful_session.cookie
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
                  cookie:
                    attributes:
                    - name: Secure
                    - name: HttpOnly
                    - name: SameSite
                      value: Strict
                    name: exact-session
                    path: /exact
                    ttl: 0s
      - match:
          pathSeparatedPrefix: /persistence.Session
        route:
          cluster: gateway-conformance-infra:infra-backend-v1:8081
          maxStreamDuration:
            maxStreamDuration: 0s
        typedPerFilterConfig:
          envoy.filters.http.stateful_session:
            '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
            statefulSession:
              sessionState:
                name: envoy.http.stateful_session.cookie
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
                  cookie:
                    attributes:
                    - name: Secure
                    - name: HttpOnly
                    - name: SameSite
                      value: Strict
                    name: grpc-session
                    path: /persistence.Session/
                    ttl: 0s
      - match:
          pathSeparatedPrefix: /redirect
        redirect:
          pathRedirect: /target
          portRedirect: 80
          responseCode: FOUND
        typedPerFilterConfig:
          envoy.filters.http.stateful_session:
            '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
            disabled: true
      - match:
          pathSeparatedPrefix: /prefix
        route:
          cluster: gateway-conformance-infra:infra-backend-v1:8080
          maxStreamDuration:
            maxStreamDuration: 0s
        typedPerFilterConfig:
          envoy.filters.http.stateful_session:
            '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
            statefulSession:
              sessionState:
                name: envoy.http.stateful_session.cookie
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
                  cookie:
                    attributes:
                    - name: Secure
                    - name: HttpOnly
                    - name: SameSite
                      value: Strict
                    name: cilium-gw-session-18fabe3ffd1e9d91
                    path: /prefix
                    ttl: 0s
      - directResponse:
          body:
            inlineString: ""
          status: 500
        match:
          pathSeparatedPrefix: /direct
        typedPerFilterConfig:
          envoy.filters.http.stateful_session:
            '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
            disabled: true
      - match:
          pathSeparatedPrefix: /plain
        route:
          cluster: gateway-conformance-infra:infra-backend-v1:8080
          maxStreamDuration:
            maxStreamDuration: 0s
        typedPerFilterConfig:
          envoy.filters.http.stateful_session:
            '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
            disabled: true
      - match:
          pathSeparatedPrefix: /same
        route:
          cluster: gateway-conformance-infra:infra-backend-v1:8080
          maxStreamDuration:
            maxStreamDuration: 0s
        typedPerFilterConfig:
          envoy.filters.http.stateful_session:
            '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
            statefulSession:
              sessionState:
                name: envoy.http.stateful_session.cookie
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
                  cookie:
                    attributes:
                    - name: Secure
                    - name: HttpOnly
                    - name: SameSite
                      value: Strict
                    name: same-session-a
                    path: /same
                    ttl: 0s
      - match:
          pathSeparatedPrefix: /same
        route:
          cluster: gateway-conformance-infra:infra-backend-v2:8080
          maxStreamDuration:
            maxStreamDuration: 0s
        typedPerFilterConfig:
          envoy.filters.http.stateful_session:
            '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
            statefulSession:
              sessionState:
                name: envoy.http.stateful_session.cookie
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
                  cookie:
                    attributes:
                    - name: Secure
                    - name: HttpOnly
                    - name: SameSite
                      value: Strict
                    name: same-session-b
                    path: /same
                    ttl: 0s
      - match:
          headers:
          - name: x-session-fallback
            stringMatch:
              exact: enabled
          prefix: /
        route:
          cluster: gateway-conformance-infra:infra-backend-v1:8080
          maxStreamDuration:
            maxStreamDuration: 0s
        typedPerFilterConfig:
          envoy.filters.http.stateful_session:
            '@type': type.googleapis.com/envoy.extensions.filters.http.stateful_session.v3.StatefulSessionPerRoute
            statefulSession:
              sessionState:
                name: envoy.http.stateful_session.cookie
                typedConfig:
                  '@type': type.googleapis.com/envoy.extensions.http.stateful_session.cookie.v3.CookieBasedSessionState
                  cookie:
                    attributes:
                    - name: Secure
                    - name: HttpOnly
                    - name: SameSite
                      value: Strict
                    name: fallback-session
                    path: /
                    ttl: 0s
  - '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      serviceName: gateway-conformance-infra/infra-backend-v1:8080
    name: gateway-conformance-infra:infra-backend-v1:8080
    outlierDetection:
      splitExternalLocalOriginErrors: true
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        commonHttpProtocolOptions:
          idleTimeout: 60s
        useDownstreamProtocolConfig:
          http2ProtocolOptions: {}
  - '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      serviceName: gateway-conformance-infra/infra-backend-v1:8081
    name: gateway-conformance-infra:infra-backend-v1:8081
    outlierDetection:
      splitExternalLocalOriginErrors: true
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        commonHttpProtocolOptions:
          idleTimeout: 60s
        explicitHttpConfig:
          http2ProtocolOptions: {}
  - '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    edsClusterConfig:
      serviceName: gateway-conformance-infra/infra-backend-v2:8080
    name: gateway-conformance-infra:infra-backend-v2:8080
    outlierDetection:
      splitExternalLocalOriginErrors: true
    type: EDS
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        commonHttpProtocolOptions:
          idleTimeout: 60s
        useDownstreamProtocolConfig:
          http2ProtocolOptions: {}
  services:
  - name: cilium-gateway-same-namespace
    namespace: gateway-conformance-infra
    ports:
    - 80
