operator/pkg/gateway-api/testdata/gateway/route-session-persistence/output/grpcroute-session-persistence-grpc.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: session-persistence-grpc
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8081
    matches:
    - method:
        service: persistence.Session
    sessionPersistence:
      sessionName: grpc-session
status:
  parents:
  - conditions:
    - lastTransitionTime: "2026-08-17T16:39:26Z"
      message: Accepted GRPCRoute
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-08-17T16:39:26Z"
      message: Service reference is valid
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: io.cilium/gateway-controller
    parentRef:
      name: same-namespace
