operator/pkg/gateway-api/testdata/gateway/route-session-persistence/output/same-namespace.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: same-namespace
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  gatewayClassName: cilium
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: http
    port: 80
    protocol: HTTP
status:
  conditions:
  - lastTransitionTime: "2026-08-17T16:39:26Z"
    message: Gateway successfully scheduled
    reason: Accepted
    status: "True"
    type: Accepted
  - lastTransitionTime: "2026-08-17T16:39:26Z"
    message: Gateway waiting for address
    reason: AddressNotAssigned
    status: "False"
    type: Programmed
  listeners:
  - attachedRoutes: 2
    conditions:
    - lastTransitionTime: "2026-08-17T16:39:26Z"
      message: Resolved Refs
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-08-17T16:39:26Z"
      message: Listener Accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-08-17T16:39:26Z"
      message: Address not ready yet
      reason: Pending
      status: "False"
      type: Programmed
    name: http
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
